--- a/index.html
+++ b/index.html
@@ -4,7 +4,54 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/mertcan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mertcan Köse</title>
+    <meta
+      name="description"
+      content="Mertcan Köse - Mobile, Web and Blockchain Developer"
+    />
+    <meta
+      property="og:title"
+      content="Mertcan Köse | Mobile, Web, and Blockchain Developer"
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://mertcankose.com/mertcan.png"
+    />
+    <meta property="og:url" content="https://mertcankose.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      name="og:description"
+      content="Mertcan Köse - Crafting innovative mobile, web, and blockchain applications"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://mertcankose.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Mertcan Köse | Mobile, Web and Blockchain Developer"
+    />
+    <meta
+      property="og:description"
+      content="Mertcan Köse - Crafting innovative mobile, web and blockchain applications"
+    />
+    <meta property="og:image" content="https://mertcankose.com/mertcan.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="mertcankose.com" />
+    <meta property="twitter:url" content="https://mertcankose.com" />
+    <meta
+      name="twitter:title"
+      content="Mertcan Köse | Mobile, Web and Blockchain Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Mertcan Köse - Crafting innovative mobile, web and blockchain applications"
+    />
+    <meta name="twitter:image" content="https://mertcankose.com/mertcan.png" />
+
+    <title>Mertcan Köse | Mobile, Web and Blockchain Developer</title>
   </head>
   <body>
     <div id="root"></div>
