--- a/public/chainlog-privacy-policy.html
+++ b/public/chainlog-privacy-policy.html
@@ -171,7 +171,7 @@
     <p>
       If you have any questions or suggestions about my Privacy Policy, do not
       hesitate to contact me at
-      <a href="mailto:contact@mertcankose.com">contact@mertcankose.com</a>
+      <a href="mailto:mertcankose142@gmail.com">mertcankose142@gmail.com</a>
     </p>
   </body>
 </html>
