--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -152,7 +152,7 @@
     <p><strong>Contact Us</strong></p>
     <p>
       If you have any questions or suggestions about my Privacy Policy, do not
-      hesitate to contact me at contact@mertcankose.com.
+      hesitate to contact me at mertcankose142@gmail.com
     </p>
     <p>
       This privacy policy page was created at
